# Fire_Alarm_Systems_Back_End

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  runtime.txt
Fire_Alarm_Systems_Back_End/: asgi.py  settings.py  urls.py  wsgi.py
myapi/: admin.py  models.py  serializers.py  urls.py  views.py
myapi/migrations/: 0001_initial.py  0002_alter_devicedata_gps_latitude_and_more.py  0002_devicedata.py  0003_alter_devicedata_esp_32_and_more.py  0003_delete_mymodel_and_more.py  0004_alter_devicedata_gps_latitude_and_more.py  0004_devicedata_time.py  0005_remove_devicedata_esp_8266_num3_and_more.py
